# test_autocoref

./: .gitignore  DATASET_QUALITY_ISSUE_ANALYSIS.md  DATASET_README.md  ENTITY_COREF_ANALYSIS.md  ENTITY_COREF_V2_FIX.md  ENTITY_COREF_V2_IMPROVEMENTS.md  EVALUATION_GUIDE.md  LONG_SEQUENCE_AUTOML_README.md  MLM_V2_COMPREHENSIVE_ANALYSIS.md  QUICK_START.md  QUICK_START_EVALUATION.md  RADICAL_SPEED_OPTIMIZATION.md  REPRODUCTION_GUIDE.md  SPEED_OPTIMIZATION_FINAL.md  analyze_datasets.py  analyze_datasets_fast.py  analyze_filtered_datasets.py  compare_original_vs_filtered.py  evaluate_all_checkpoints.sh  evaluate_combined_quality.py  main.py  pyproject.toml  real_coref_combined_results.csv  real_coref_combined_results.json  real_coref_entity_results.csv  real_coref_entity_results.json  real_coref_results.csv  real_coref_results.json  real_coref_results_partial.json  reevaluation_results.csv  reevaluation_results.json  roberta_large_1536_results.csv  roberta_large_1536_results.json  run_training.sh  simple_1536_evaluation.csv  simple_1536_evaluation.json  test_chunked_analysis.py  test_filtering.py  test_long_sequence_automl.py  test_naver_news.py  (+3 more)
automl2_spanMlm/: eval_coref_compare.py  main.py  pyproject.toml  span_mlm_coref_probe.py
automl2_spanMlm/runs/automl_spanmlm_kor/: automl_summary.csv  automl_trials.jsonl  best_by_short_f1.json  eval_coref.json  optuna.db
automl2_spanMlm/runs/automl_spanmlm_kor/trial_1/: eval_coref.json
automl2_spanMlm/runs/automl_spanmlm_kor_next/: automl_best.json  automl_trials.jsonl  best_by_longavg_f1.json  best_by_short_f1.json  optuna.db
(+243 files in other folders)
