[project]
name = "automl2-spanmlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "kiwipiepy>=0.21.0",
    "optuna>=4.5.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
